Signed the confirmation emails.

--- a/socrates/lib/notifications/jade/waitinglistConfirmation.jade
+++ b/socrates/lib/notifications/jade/waitinglistConfirmation.jade
@@ -12,3 +12,5 @@ html
     p We will inform you as soon as a space is available. You can then choose the number of nights you want to stay.
     p You can review and modify your waitinglist data at #{' '}
       a(href='#{url}/members/edit') #{url}/members/edit
+
+    p The organisers
