--- a/socrates/lib/notifications/jade/registrationConfirmation.jade
+++ b/socrates/lib/notifications/jade/registrationConfirmation.jade
@@ -21,3 +21,7 @@ html
       a(href='#{url}/registration') #{url}/registration
 
     p If you have questions, need help or want to give feedback, just reply to this e-mail.
+
+    p We are looking forward to seeing you in Soltau in August!
+
+    P The SoCraTes organisers
