Now the participant's name is shown in the superuser emails.

--- a/socrates/lib/notifications/jade/superuserRegistrationNotification.jade
+++ b/socrates/lib/notifications/jade/superuserRegistrationNotification.jade
@@ -3,7 +3,7 @@ html
   body
     h3 SoCraTes Registration Confirmation
     p
-      #{member.displayName()} (#{member.nickname()}) has registered for a #{' '} 
+      | #{member.displayName()} (#{member.nickname()}) has registered for a #{' '}
       b #{bookingdetails.room}
       | #{' '} for #{' '}
       b #{bookingdetails.nights}
