--- a/socrates/lib/notifications/jade/superuserWaitinglistNotification.jade
+++ b/socrates/lib/notifications/jade/superuserWaitinglistNotification.jade
@@ -3,6 +3,6 @@ html
   body
     h3 SoCraTes Waitinglist Confirmation
     p
-      #{member.displayName()} (#{member.nickname()}) has registered for a #{' '} 
+      | #{member.displayName()} (#{member.nickname()}) has registered for a #{' '}
       b #{bookingdetails.room}
       | .
