Fixed and improved payment notification.

--- a/socrates/lib/notifications/jade/paymenttemplate.jade
+++ b/socrates/lib/notifications/jade/paymenttemplate.jade
@@ -4,12 +4,14 @@ html
     h3 Confirmation / Bestätigung
     p.
       Hello #{member.displayName()},<br>
-      we confirm that your payment for activity "#{activityTitle}" has reached our account.
+      we confirm that your payment for #{activityTitle} has reached our account.<br>
+      You are now a SoCraTes participant.
     p.
       You will receive a billable receipt during the event.
     hr
     p. 
       Hallo #{member.displayName()},<br>
-      hiermit bestätigen wir den Eingang Deiner Zahlung für die Aktivität "#{activityTitle}" auf unserem Konto.
+      hiermit bestätigen wir den Eingang Deiner Zahlung für die #{activityTitle} auf unserem Konto.<br>
+      Du bist nun ein SoCraTes-Teilnehmer.
     p.
-      Eine offizielle Rechnung wird im Rahmen des Events ausgestellt.
+      Eine offizielle Rechnung wird im Rahmen der Veranstaltung ausgestellt.
