--- a/socrates/lib/registration/views/participationinfoform.jade
+++ b/socrates/lib/registration/views/participationinfoform.jade
@@ -83,10 +83,11 @@ mixin participationinfoform(activity, roomOptions, registration)
                   else
                     tr
                       th #{option.name}
-                        .radio-inline.pull-right
-                          label
-                            input(type='radio', name='nightsOptions', value=option.id + ',waitinglist')
-                            |  Waitinglist
+                        if option.displayWaitinglistCheckbox
+                          .radio-inline.pull-right
+                            label
+                              input(type='radio', name='nightsOptions', value=option.id + ',waitinglist')
+                              |  Waitinglist
                       td.text-center.disabled-text
                         span(style='margin-left:20px;') #{option.two}&nbsp;€
                       td.text-center.disabled-text
