--- a/socrates/lib/registration/views/get.jade
+++ b/socrates/lib/registration/views/get.jade
@@ -19,7 +19,7 @@ block content
         .pull-right.visible-print
           img(height='80px', src='/qrcode?url=#{encodeURIComponent(activity.fullyQualifiedUrl())}')
         .btn-group.pull-right.hidden-print
-          if !accessrights.isRegistered()
+          if !accessrights.isRegistered() && !registration.isPossible
             a.btn.btn-primary.pull-right(data-toggle='modal', data-target='#interested', href='/registration/interested') Notify me when registration starts!
           if (accessrights.canEditActivity(activity))
             a.btn.btn-default(href='/registration/management', title=t('activities.participants')): i.fa.fa-list-ol.fa-fw
