--- a/socrates/lib/notifications/jade/changedRegistration.jade
+++ b/socrates/lib/notifications/jade/changedRegistration.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   body
-    h3 SoCraTes Change of Length of Stay
+    h3 SoCraTes Change of Registration
     p.
       Hello #{member.displayName()},
     p We have changed your registration for the SoCraTes Conference 2015 as follows:
