--- a/socrates/lib/notifications/jade/superuserRegistrationNotification.jade
+++ b/socrates/lib/notifications/jade/superuserRegistrationNotification.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   body
-    h3 SoCraTes Registration Confirmation
+    h3 SoCraTes Registration Confirmation / Change
     p
       | #{member.displayName()} (#{member.nickname()}) has registered for a #{' '}
       b #{bookingdetails.room}
