Improved wording of superuser waitinglist email.

--- a/socrates/lib/notifications/jade/superuserWaitinglistNotification.jade
+++ b/socrates/lib/notifications/jade/superuserWaitinglistNotification.jade
@@ -1,8 +1,8 @@
 doctype html
 html
   body
-    h3 SoCraTes Waitinglist Confirmation
+    h3 SoCraTes Waitinglist Confirmation / Change
     p
-      | #{member.displayName()} (#{member.nickname()}) has registered for a #{' '}
+      | #{member.displayName()} (#{member.nickname()}) is on the waitinglist for a #{' '}
       b #{bookingdetails.room}
       | .
