--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -67,8 +67,7 @@ block scripts
     }
   +dataTable('.addontable', '[ 4, "asc" ]', '[{targets: [0,8,9,10], type: "date-eu"}]')
   +dataTable('.membertable', '[ 0, "asc" ]', '[{targets: 0, type: "date-eu"}]')
-  +dataTable('.tshirttable', '[]', '[]')
-  +dataTable('.unsubscribedtable', '[]', '[]')
+  +dataTable('.unsortedtable', '[]', '[]')
   +dataTable('.addressestable', '[ 1, "asc" ]', '[]')
 block title
   | #{activity.title()} - Verwaltung
@@ -79,6 +78,7 @@ block content
         h2 #{activity.title()} - Verwaltung
           a.btn.pull-right.btn-default(href='/registration') Zurück
   ul.nav.nav-tabs
+    li: a(href='#overview', data-toggle='tab') Übersicht
     li: a(href='#main', data-toggle='tab') #{t('activities.participants')}
     li: a(href='#waitinglist', data-toggle='tab') Wartelisten
     li.active: a(href='#addons', data-toggle='tab') Zahlungen
@@ -88,6 +88,24 @@ block content
   .row
     .col-md-12
       .tab-content
+        .tab-pane#overview
+            .panel
+              table.table.table-condensed.table-hover.table-striped.unsortedtable
+                thead
+                  tr
+                    th Option
+                    th Teilnehmer
+                    th Wartende
+                tbody
+                  for resourceName in activity.resourceNames()
+                    -var participants = activity.participantsOf(resourceName)
+                    -var resource = activity.socratesResourceNamed(resourceName)
+                    -var waitingMembers = activity.waitinglistMembers[resourceName]
+                    tr
+                      td #{resourceName}
+                      td #{participants.length} von #{resource.limit() || 'unbegrenzt'}
+                      td #{waitingMembers.length}
+            hr
         .tab-pane#main
           each resourceName in activity.resourceNames()
             -var participants = activity.participantsOf(resourceName)
@@ -178,7 +196,7 @@ block content
         .tab-pane#tshirtSizes
           h4 Verteilungen der T-Shirt-Größen
           .panel
-            table.table.table-condensed.table-hover.table-striped.tshirttable
+            table.table.table-condensed.table-hover.table-striped.unsortedtable
               thead
                 tr
                   th T-Shirt-Größe
@@ -192,7 +210,7 @@ block content
         .tab-pane#unsubscribed
           h4 Zahlungs-Information von Abgemeldeten
           .panel
-            table.table.table-condensed.table-hover.table-striped.unsubscribedtable
+            table.table.table-condensed.table-hover.table-striped.unsortedtable
               thead
                 tr
                   th Nickname
