--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -11,12 +11,14 @@ mixin buttonOrDate(momentOrNull, paymentDone, nickname)
   if (momentOrNull)
     | #{momentOrNull.locale('de').format('L')}
   else
-    a.btn.btn-primary.btn-xs.btn-block(id='#{encodeURIComponent(nickname) + "-button"}',
-    href='javascript:changeState(\'#{"/activities/paymentReceived/" + encodeURIComponent(nickname)}\', \'#{encodeURIComponent(nickname) + "-button"}\')') Erhalten…
+    -var spacelessNick = nickname.replace(/ /g, 'X')
+    a.btn.btn-primary.btn-xs.btn-block(id='#{encodeURIComponent(spacelessNick) + "-button"}',
+    href='javascript:changeState(\'#{"/activities/paymentReceived/" + encodeURIComponent(nickname)}\', \'#{encodeURIComponent(spacelessNick) + "-button"}\')') Erhalten…
 
 mixin fromWaitinglistToParticipant(resourceName, nickname)
-  a.btn.btn-primary.btn-xs.btn-block(id='#{encodeURIComponent(nickname) + "-button"}',
-  href='javascript:changeState(\'#{"/activities/fromWaitinglistToParticipant/" + encodeURIComponent(resourceName) + "/" + encodeURIComponent(nickname)}\', \'#{encodeURIComponent(nickname) + "-button"}\')') Teilnehmen lassen…
+  -var spacelessNick = nickname.replace(/ /g, 'X')
+  a.btn.btn-primary.btn-xs.btn-block(id='#{encodeURIComponent(spacelessNick) + "-button"}',
+  href='javascript:changeState(\'#{"/activities/fromWaitinglistToParticipant/" + encodeURIComponent(resourceName) + "/" + encodeURIComponent(nickname)}\', \'#{encodeURIComponent(spacelessNick) + "-button"}\')') Teilnehmen lassen…
 
 mixin newDuration(resourceName, nickname, currentSelection)
   form(id='activityform', action='/activities/newDuration', method='post')
