"save & pay" forward until the payment has been confirmed

--- a/socrates/lib/members/views/edit.jade
+++ b/socrates/lib/members/views/edit.jade
@@ -37,7 +37,7 @@ mixin editButtons
       a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
     else
       a.btn.btn-danger(href='/auth/logout', type='cancel') #{t('members.cancel')}
-    if (!isOnlyOnWaitinglist && addon && participation && !participation.payment().paymentDone())
+    if (!isOnlyOnWaitinglist && addon && participation && !participation.payment().paymentConfirmed())
       button.btn.btn-warning(type='submit')
         i.fa.fa-money.fa-fw &nbsp;
         | Save & Pay
