In the durations overview, add totals for each option (i.e. how many participants in total stay up until that point in time).

--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -141,7 +141,7 @@ block content
                   for duration in durations
                     tr
                       td #{duration.duration}
-                      td #{duration.count}
+                      td #{duration.count} (total: #{duration.total})
 
         .tab-pane#main
           each resourceName in activity.resourceNames()
