--- a/socrates/views/layoutComponents.jade
+++ b/socrates/views/layoutComponents.jade
@@ -76,6 +76,12 @@ mixin navbar(xs)
             else
               li: a(href='/') <i>none</i>
         +loginMenu(true)
+      if accessrights.isRegistered()
+        if !!user.subscriber && user.subscriber.needsToPay()
+          a.btn.btn-primary.pull-right.hidden-xs(href='/payment/socrates', style='margin-top: 7px;') Pay
+          a.btn.btn-primary.visible-xs(href='/payment/socrates', style='margin-top: 7px;') Pay
+
+      
       
 mixin footer
   footer(style='margin-top: 10px')
