Bedroom pairing now also displays the participants' wishes

--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -66,7 +66,7 @@ mixin unpairedParticipantDropdown(resourceName, participant1Nick, unpairedPartic
       for participant2 in unpairedParticipants
         -var p2nick = participant2.nickname()
         if participant1Nick !== p2nick
-          option(value=p2nick) #{participant2.displayName()} (#{p2nick})
+          option(value=p2nick) #{participant2.displayName()} (#{p2nick}) - [Wunsch: #{participant2.subscriber.currentParticipation().roommate()}]
     button.btn.btn-default.btn-xs(type='submit') Zufügen
 
 block scripts
@@ -243,11 +243,11 @@ block content
                 tbody
                   for pair in rooms[resourceName].roomPairs
                     tr
-                      td #{pair.participant1.displayName()} (#{pair.participant1.nickname()})
-                      td #{pair.participant2.displayName()} (#{pair.participant2.nickname()})
+                      td #{pair.participant1.displayName()} (#{pair.participant1.nickname()}) - [Wunsch: #{pair.participant1.subscriber.currentParticipation().roommate()}]
+                      td #{pair.participant2.displayName()} (#{pair.participant2.nickname()}) - [Wunsch: #{pair.participant2.subscriber.currentParticipation().roommate()}]
                   for participant in rooms[resourceName].unpairedParticipants
                     tr
-                      td #{participant.displayName()} (#{participant.nickname()})
+                      td #{participant.displayName()} (#{participant.nickname()}) - [Wunsch: #{participant.subscriber.currentParticipation().roommate()}]
                       td: +unpairedParticipantDropdown(resourceName, participant.nickname(), rooms[resourceName].unpairedParticipants)
 
         .tab-pane#tshirtSizes
