--- a/socrates/lib/site/views/sponsoring.jade
+++ b/socrates/lib/site/views/sponsoring.jade
@@ -35,7 +35,7 @@ block content
         li You will be mentioned in SoCraTes' <b>official social media</b> communications
       p Depending on the amount you choose to invest, you will also get
       ul
-        li Guaranteed <b>participant slots</b> (you'll only need to pay for the hotel accommodation)
+        li Guaranteed <b>participant slots</b> (you'll still need to pay for the hotel accommodation)
         li Your company name in <b>official mailings</b>
 
       p.
