Better show 0 if there are no free spots left...

--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -130,7 +130,7 @@ block content
                   tr
                     td #{resourceName}
                     td #{participants} von #{resource.limit() || 'unbegrenzt'}
-                    td #{freeSpots || 'beliebig viele'}
+                    td #{freeSpots}
                     td #{waitingMembers}
                 tr
                   td <b>Summe</b>
